--- a/DungeonCrawl/package.json
+++ b/DungeonCrawl/package.json
@@ -7,13 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.1.2",
     "expo": "~36.0.0",
+    "motion-ui": "^2.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
-    "react-native-progress": "^4.0.3",
+    "react-native-progress": "^4.0.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-unimodules": "~0.7.0",
