--- a/DungeonCrawl/package.json
+++ b/DungeonCrawl/package.json
@@ -13,6 +13,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-progress": "^4.0.1",
